hot fix for navbar z-indexes

--- a/styles/components/MobileNavBar.module.scss
+++ b/styles/components/MobileNavBar.module.scss
@@ -3,6 +3,7 @@ $menu-background-color: #2d2e2e;
 
 .container {
   font-size: 1.5rem;
+
 }
 
 .hamburger {
@@ -15,6 +16,7 @@ $menu-background-color: #2d2e2e;
   padding: 0.5rem 1rem;
   border-bottom: 1px solid $primary;
   background-color: $primary-background;
+  z-index: 5;
 
   .logo {
     height: 2rem;
@@ -36,7 +38,7 @@ $menu-background-color: #2d2e2e;
   height: 100vh;
   // start width as zero, transition it to larger size on CSS style addition
   width: 0;
-  z-index: 1;
+  z-index: 10;
   right: 0;
   top: 0;
   background-color: $menu-background-color;
