--- a/styles/components/NavBar.module.scss
+++ b/styles/components/NavBar.module.scss
@@ -14,6 +14,8 @@
   justify-content: center;
 
   background-color: $primary-background;
+  z-index: 10;
+  
   a {
     margin: 0.5rem;
     padding: 0 0.5rem;
